# open_rent_management

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  uml_diagramm.plantuml
.github/: lint_rental_management_app.yaml
.github/workflows/: lint_rental_management_app.yaml  lint_rental_management_front.yaml
alembic/: env.py
alembic/versions/: 3f7d8fd625b6_extend_model_for_property_manager.py  42ee39593c9e_initial_migration.py  61211887c12a_extend_model_for_property.py  87978f357ec8_initial_model.py  f8a184dc5f9f_initial_migration.py
app/: main.py
app/api/v1/endpoints/: address_controller.py  property_controller.py  property_manager_controller.py  tenant_controller.py  user_controller.py
app/core/: auth.py  config.py  database.py
app/models/: __init__.py  address.py  auth_errors.py  base.py  guarantor.py  inventory.py  payment.py  property.py  property_manager.py  rental.py  tenant.py  user.py
app/schemas/: __init__.py  address_create.py  address_update.py  property_create.py  property_manager_create.py  property_manager_update.py  property_update.py  tenant_create.py  tenant_update.py  token.py  user_base.py  user_create.py  user_response.py
app/services/: authentication_service.py  test_authentication_service.py  user_service.py
app/tests/: test_api.py  test_auth.py  test_authentication_service.py  test_user_service.py
front/my-react-router-app/: eslint.config.js  package-lock.json  package.json  tsconfig.json
front/my-react-router-app/app/: root.tsx  routes.ts
front/my-react-router-app/app/Model/: bearer-token.ts
front/my-react-router-app/app/components/: button.tsx  datatable.tsx  header.tsx  input.tsx  menu.tsx
front/my-react-router-app/app/model/: bearer-token.ts  property-manager.ts  property.ts  tenant.ts
front/my-react-router-app/app/routes/: finance.tsx  home.tsx  inventories.tsx  login.tsx  logout.tsx  properties.tsx  property-detail.tsx  rentals.tsx  tenant-detail.tsx  tenants.tsx
front/my-react-router-app/app/services/: api.service.ts  axios.service.ts  properties.service.ts  session.server.ts  session.service.ts
