[project]
name = "open-rent-management"
version = "0.1.0"
description = "A rental management application built with FastAPI."
authors = [
    {name = "Baron Blanc", email = "baron.blanc@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "open-rent-management"
version = "0.1.0"
description = "A rental management application built with FastAPI."
authors = ["Baron Blanc <baron.blanc@example.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
runserver = "app.main:start"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
alembic = "^1.15.1"
annotated-types = "^0.7.0"
anyio = "^4.9.0"
bcrypt = "^4.3.0"
build = "^1.2.2.post1"
CacheControl = "^0.14.2"
certifi = "^2025.1.31"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
cleo = "^2.1.0"
click = "^8.1.8"
crashtest = "^0.4.1"
cryptography = "^44.0.2"
distlib = "^0.3.9"
dnspython = "^2.7.0"
dulwich = "^0.22.8"
email-validator = "^2.2.0"
fastapi = "^0.115.11"
fastjsonschema = "^2.21.1"
filelock = "^3.18.0"
findpython = "^0.6.3"
greenlet = "^3.1.1"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
idna = "^3.10"
installer = "^0.7.0"
jaraco-classes = "^3.4.0"
jaraco-context = "^6.0.1"
jaraco-functools = "^4.1.0"
jeepney = "^0.9.0"
jwt = "^1.3.1"
keyring = "^25.6.0"
Mako = "^1.3.9"
MarkupSafe = "^3.0.2"
more-itertools = "^10.6.0"
msgpack = "^1.1.0"
packaging = "^24.2"
passlib = "^1.7.4"
pbs-installer = "^2025.3.11"
pkginfo = "^1.12.1.2"
platformdirs = "^4.3.6"
poetry = "^2.1.1"
poetry-core = "^2.1.1"
psycopg2-binary = "^2.9.10"
pycparser = "^2.22"
pydantic = "^2.10.6"
pydantic-core = "^2.27.0"
PyJWT = "^2.10.1"
pyproject-hooks = "^1.2.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
RapidFuzz = "^3.12.2"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
SecretStorage = "^3.3.3"
shellingham = "^1.5.4"
sniffio = "^1.3.1"
SQLAlchemy = "^2.0.39"
starlette = "^0.46.1"
tomlkit = "^0.13.2"
trove-classifiers = "^2025.3.13.13"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"
uvicorn = "^0.34.0"
virtualenv = "^20.29.3"
zstandard = "^0.23.0"
pre-commit = "^4.1.0"
pyyaml = "^6.0.2"

[tool.poetry.group.ci.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
isort = "^5.12.0"
types-setuptools = "^68.2.0.0"
types-pyyaml = "^6.0.12.12"
toml = "^0.10.2"
types-paramiko = "^3.3.0.0"
mypy-extensions = "^1.0.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
follow_imports = "silent"
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
line-length = 120
skip-string-normalization = false

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
